# mathingo

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 2026_04_28_2050-d35b3a02feb9_initial_schema.py  2026_04_28_2123-0fcdeb013033_seed_4mm101_course.py  2026_04_29_0634-5d9486ef38a3_add_first_name_to_users.py  2026_04_29_0720-f4ed5e40904a_seed_4mm101_limity_section_content.py  2026_04_29_0813-738170845fc1_add_is_completed_to_lesson_attempts.py  2026_04_29_0849-cc60b81c5a9e_add_chat_usage_table.py  2026_04_29_1230-7e2f1a9c8d4b_seed_mock_leaderboard_users.py  2026_04_29_1430-a1b2c3d4e5f6_add_avatar_fields_to_users.py  2026_04_29_1445-b2c3d4e5f6a7_extend_exercise_attempts.py  2026_04_29_1500-c3d4e5f6a7b8_set_mock_user_avatars.py  2026_05_03_2200-d4e5f6a7b8c9_add_push_subscriptions_table.py  2026_05_03_2300-e5f6a7b8c9d0_add_notification_tables.py  2026_05_05_1200-f6a7b8c9d0e1_add_cloze_to_exercise_type.py  2026_05_05_1210-a1c2d3e4f5b6_seed_limity_funkce_v2.py  (+1 more)
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  content.py  (+4 more)
backend/scripts/: generate_vapid_keys.py  refresh_mock_xp.py
backend/tests/: conftest.py  test_display_name_validation.py  test_evaluation_exercise_types.py  test_notification_prefs.py  test_notifications.py  test_push.py  test_seed_limity_funkce_v2.py  test_streak_liveness.py  test_users_stats.py
(+94 files in other folders)
